--- a/sms_campaigning.html
+++ b/sms_campaigning.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMS Campaigning</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="smsCampining.css">
+    <link rel="stylesheet" href="whatsappCampining.css">
 </head>
 
 <body>
 
-    <!-- Navbar -->
     <div class="navbar">
         <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
         <span>My Website</span>
     </div>
 
-    <!-- Drawer -->
     <div id="drawer" class="drawer">
         <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
         <div id="home-submenu" class="submenu">
@@ -32,142 +30,131 @@
 
         <a href="#" onclick="toggleSubMenu('campaigning-submenu')">Campaigning</a>
         <div id="campaigning-submenu" class="submenu">
-            <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
-            <a href="email_campaigning.html">Email Campaigning</a>
             <a href="sms_campaigning.html">SMS Campaigning</a>
+            <a href="email_campaigning.html">Email Campaigning</a>
+            <a href="whatsapp_campaigning.html">What's App Campaigning</a>
         </div>
 
         <a href="#">Contact</a>
     </div>
 
-    <!-- SMS Campaigning Section -->
-    <div class="sms-section">
+    <div class="email-section">
         <h2>SMS Campaigning</h2>
 
-        <div class="sms-card">
-            <div class="sms-selection">
-                <!-- SMS Type Dropdown -->
-                <div class="form-group">
-                    <label for="smsType">Choose SMS Type:</label>
-                    <select id="smsType" onchange="toggleSmsInput()">
-                        <option value="all">All SMS</option>
-                        <option value="selective">Selective SMS</option>
-                    </select>
-                </div>
+        <div class="email-card">
+            <div class="email-selection">
+                <label for="emailType">Choose SMS Type:</label>
+                <select id="emailType" onchange="toggleEmailInput()">
+                    <option value="all">All SMS</option>
+                    <option value="selective">Selective SMS</option>
+                </select>
 
-                <!-- Template Type Dropdown -->
-                <div class="form-group">
-                    <label for="smsTemplate">Template Type:</label>
-                    <select id="smsTemplate" onchange="handleTemplateChange()">
-                        <option value="" disabled selected>Select Template</option>
-                        <option value="template1">Template 1</option>
-                        <option value="template2">Template 2</option>
-                        <option value="template3">Template 3</option>
-                    </select>
-                </div>
+                <label for="templateType">Choose Template:</label>
+                <select id="templateType" onchange="toggleTemplateInput()">
+                    <option value="">Select Template</option>
+                    <option value="template1">Template 1</option>
+                    <option value="template2">Template 2</option>
+                    <option value="template3">Template 3</option>
+                </select>
             </div>
 
-            <!-- Textarea for Selective SMS -->
-            <div class="selective-sms-section" style="display: none;">
-                <label for="smsNumbers">Enter Numbers (comma separated):</label>
-                <textarea id="smsNumbers" placeholder="Enter phone numbers here"></textarea>
+            <div class="selective-email-section" style="display:none;">
+                <label for="emails">Enter SMS Numbers (comma separated):</label>
+                <textarea id="emails" placeholder="Enter SMS numbers here"></textarea>
             </div>
 
-            <!-- Input for Template Number -->
-            <div id="templateNumberSection" style="display: none;">
-                <label for="templateNumber" >Enter Template Number:</label>
-                <input type="number" id="templateNumber" placeholder="e.g., 100" onkeydown="handleEnterKey(event)" />
+            <div class="template-value-section" id="templateValueSection" style="display:none;">
+                <label for="templateValue">Enter Value for Selected Template:</label>
+                <input type="text" id="templateValue" placeholder="Enter your string here" onkeydown="handleEnter(event)">
             </div>
 
-            <!-- Template Numbers Display -->
-            <div id="templateValuesDisplay">
-                <!-- Entered numbers will appear here -->
-            </div>
+            <!-- Section to show entered values with a cross button -->
+            <div id="templateValuesDisplay" class="template-values-display"></div>
 
-            <!-- Submit Button -->
-            <button onclick="submitSmsCampaign()">Submit Campaign</button>
+            <button onclick="submitEmailCampaign()">Submit Campaign</button>
         </div>
     </div>
 
-    <!-- JS Scripts -->
+    <script src="drawer.js"></script>
+
     <script>
-        // Show/hide textarea based on SMS type selection
-        function toggleSmsInput() {
-            const smsType = document.getElementById("smsType").value;
-            const selectiveSection = document.querySelector(".selective-sms-section");
+        function toggleEmailInput() {
+            const emailType = document.getElementById("emailType").value;
+            const selectiveEmailSection = document.querySelector(".selective-email-section");
 
-            if (smsType === "selective") {
-                selectiveSection.style.display = "block";
+            if (emailType === "selective") {
+                selectiveEmailSection.style.display = "block";
             } else {
-                selectiveSection.style.display = "none";
+                selectiveEmailSection.style.display = "none";
             }
         }
 
-        // Show input for template number based on template selection
-        function handleTemplateChange() {
-            const templateSelect = document.getElementById("smsTemplate");
-            const templateNumberSection = document.getElementById("templateNumberSection");
+        function toggleTemplateInput() {
+            const templateType = document.getElementById("templateType").value;
+            const templateValueSection = document.getElementById("templateValueSection");
 
-            if (templateSelect.value) {
-                templateNumberSection.style.display = "block";
+            if (templateType !== "") {
+                templateValueSection.style.display = "block";
             } else {
-                templateNumberSection.style.display = "none";
+                templateValueSection.style.display = "none";
             }
         }
 
-        // Handle the Enter key press for adding numbers to the display
-        function handleEnterKey(event) {
-            // Check if the Enter key (key code 13) is pressed
+        // Function to handle "Enter" key press in the template value input
+        function handleEnter(event) {
             if (event.key === "Enter") {
-                event.preventDefault(); // Prevent form submission if it's in a form
-
-                const numberInput = document.getElementById("templateNumber");
-                const number = numberInput.value;
-
-                if (number && !isNaN(number)) {
-                    // Create the number tag
-                    const tag = document.createElement("div");
-                    tag.className = "template-number";
-                    tag.innerHTML = `${number} <span class="remove-btn" onclick="removeNumberTag(this)">×</span>`;
-
-                    // Append the tag to the display section
-                    document.getElementById("templateValuesDisplay").appendChild(tag);
-
-                    // Clear the input field after adding the number
-                    numberInput.value = "";
-                }
+                event.preventDefault(); // Prevent form submission (if inside a form)
+                addTemplateValue();  // Call the function to add the value to the section
             }
         }
 
-        // Remove the number tag
-        function removeNumberTag(span) {
-            const tag = span.parentElement;
-            tag.remove();
+        // Function to add the entered value to the display section
+        function addTemplateValue() {
+            const templateValue = document.getElementById("templateValue").value;
+            const templateValuesDisplay = document.getElementById("templateValuesDisplay");
+
+            if (templateValue !== "") {
+                // Create a new div to display the value with a cross button
+                const valueDiv = document.createElement("div");
+                valueDiv.classList.add("template-value-tag");
+
+                // Create the value text node
+                const valueText = document.createElement("span");
+                valueText.textContent = templateValue;
+                valueDiv.appendChild(valueText);
+
+                // Create the cross button to remove the value
+                const removeBtn = document.createElement("span");
+                removeBtn.textContent = "❌";
+                removeBtn.classList.add("remove-btn");
+                removeBtn.onclick = function () {
+                    valueDiv.remove();
+                };
+                valueDiv.appendChild(removeBtn);
+
+                // Append the new value div to the display section
+                templateValuesDisplay.appendChild(valueDiv);
+
+                // Clear the input field after adding the value
+                document.getElementById("templateValue").value = "";
+            }
         }
 
-        // Submit logic for SMS campaign
-        function submitSmsCampaign() {
-            const smsType = document.getElementById("smsType").value;
-            const selectedTemplate = document.getElementById("smsTemplate").value || "None";
-            const selectedNumbers = document.getElementsByClassName("template-number");
+        function submitEmailCampaign() {
+            const emailType = document.getElementById("emailType").value;
+            const templateValue = document.getElementById("templateValue").value;
 
-            let numbers = [];
-            for (let i = 0; i < selectedNumbers.length; i++) {
-                numbers.push(selectedNumbers[i].textContent.replace('×', '').trim());
-            }
-
-            if (smsType === "all") {
-                alert(`Submitting campaign to ALL numbers\nTemplate: ${selectedTemplate}\nNumbers: ${numbers.join(', ')}`);
+            if (emailType === "all") {
+                alert("Submitting campaign to all SMS users.");
             } else {
-                const numbersInput = document.getElementById("smsNumbers").value;
-                alert(`Submitting campaign to SELECTED numbers:\n${numbersInput}\nTemplate: ${selectedTemplate}\nNumbers: ${numbers.join(', ')}`);
+                const emails = document.getElementById("emails").value;
+                alert("Submitting campaign to selected SMS numbers: " + emails);
+            }
+
+            if (templateValue) {
+                alert("Using template value: " + templateValue);
             }
         }
-        function toggleDrawer() {
-      const drawer = document.getElementById('drawer');
-      drawer.classList.toggle('open');
-  }
-
     </script>
 
 </body>
