--- a/whatsapp_campaigning.html
+++ b/whatsapp_campaigning.html
@@ -2,161 +2,158 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Campaigning</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="whatsappCampining.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WhatsApp Campaigning</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="whatsappCampining.css" />
 </head>
 
 <body>
+  <div class="navbar">
+    <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
+    <span>My Website</span>
+  </div>
 
-    <div class="navbar">
-        <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
-        <span>My Website</span>
+  <div id="drawer" class="drawer">
+    <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
+    <div id="home-submenu" class="submenu">
+      <a href="phone.html">Phone</a>
+      <a href="email.html">Email</a>
     </div>
 
-    <div id="drawer" class="drawer">
-        <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
-        <div id="home-submenu" class="submenu">
-            <a href="phone.html">Phone</a>
-            <a href="email.html">Email</a>
-        </div>
-
-        <a href="#" onclick="toggleSubMenu('template-submenu')">Template</a>
-        <div id="template-submenu" class="submenu">
-            <a href="templatecontent.html">Template Content</a>
-        </div>
-
-        <a href="#" onclick="toggleSubMenu('campaigning-submenu')">Campaigning</a>
-        <div id="campaigning-submenu" class="submenu">
-            <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
-            <a href="email_campaigning.html">Email Campaigning</a>
-            <a href="sms_campaigning.html">SMS Campaigning</a>
-        </div>
-
-        <a href="#">Contact</a>
+    <a href="#" onclick="toggleSubMenu('template-submenu')">Template</a>
+    <div id="template-submenu" class="submenu">
+      <a href="templatecontent.html">Template Content</a>
     </div>
 
+    <a href="#" onclick="toggleSubMenu('campaigning-submenu')">Campaigning</a>
+    <div id="campaigning-submenu" class="submenu">
+      <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
+      <a href="email_campaigning.html">Email Campaigning</a>
+      <a href="sms_campaigning.html">SMS Campaigning</a>
+    </div>
+
+    <a href="#">Contact</a>
+  </div>
+
+  <form class="form" onsubmit="submitEmailCampaign(event)">
     <div class="email-section">
-        <h2>WhatsApp Campaigning</h2>
+      <h2>WhatsApp Campaigning</h2>
 
-        <div class="email-card">
-            <div class="email-selection">
-                <label for="emailType">Choose WhatsApp Type:</label>
-                <select id="emailType" onchange="toggleEmailInput()">
-                    <option value="all">All WhatsApp</option>
-                    <option value="selective">Selective WhatsApp</option>
-                </select>
+      <div class="email-card">
+        <div class="email-selection">
+          <label for="emailType">Choose WhatsApp Type:</label>
+          <select id="emailType" onchange="toggleEmailInput()">
+            <option value="all">All WhatsApp</option>
+            <option value="selective">Selective WhatsApp</option>
+          </select>
 
-                <label for="templateType">Choose Template:</label>
-                <select id="templateType" onchange="toggleTemplateInput()">
-                    <option value="">Select Template</option>
-                    <option value="template1">Template 1</option>
-                    <option value="template2">Template 2</option>
-                    <option value="template3">Template 3</option>
-                </select>
-            </div>
-
-            <div class="selective-email-section" style="display:none;">
-                <label for="emails">Enter WhatsApp Numbers (comma separated):</label>
-                <textarea id="emails" placeholder="Enter WhatsApp numbers here"></textarea>
-            </div>
-
-            <div class="template-value-section" id="templateValueSection" style="display:none;">
-                <label for="templateValue">Enter Value for Selected Template:</label>
-                <input type="text" id="templateValue" placeholder="Enter your string here" onkeydown="handleEnter(event)">
-            </div>
-
-            <!-- Section to show entered values with a cross button -->
-            <div id="templateValuesDisplay" class="template-values-display"></div>
-
-            <button onclick="submitEmailCampaign()">Submit Campaign</button>
+          <label for="templateType">Choose Template:</label>
+          <select id="templateType" onchange="toggleTemplateInput()">
+            <option value="">Select Template</option>
+            <option value="template1">Template 1</option>
+            <option value="template2">Template 2</option>
+            <option value="template3">Template 3</option>
+          </select>
         </div>
+
+        <div class="selective-email-section" style="display: none;">
+          <label for="emails">Enter WhatsApp Numbers (comma separated):</label>
+          <textarea id="emails" placeholder="Enter WhatsApp numbers here"></textarea>
+        </div>
+
+        <div class="template-value-section" id="templateValueSection" style="display: none;">
+          <label for="templateValue">Enter Value for Selected Template:</label>
+          <input type="text" id="templateValue" placeholder="Enter your string here" onkeydown="handleEnter(event)" />
+        </div>
+
+        <div id="templateValuesDisplay" class="template-values-display"></div>
+
+        <button type="submit">Submit Campaign</button>
+      </div>
     </div>
+  </form>
 
-    <script src="drawer.js"></script>
+  <script src="drawer.js"></script>
 
-    <script>
-        function toggleEmailInput() {
-            const emailType = document.getElementById("emailType").value;
-            const selectiveEmailSection = document.querySelector(".selective-email-section");
+  <script>
+    function toggleEmailInput() {
+      const emailType = document.getElementById("emailType").value;
+      document.querySelector(".selective-email-section").style.display = emailType === "selective" ? "block" : "none";
+    }
 
-            if (emailType === "selective") {
-                selectiveEmailSection.style.display = "block";
-            } else {
-                selectiveEmailSection.style.display = "none";
-            }
-        }
+    function toggleTemplateInput() {
+      const templateType = document.getElementById("templateType").value;
+      document.getElementById("templateValueSection").style.display = templateType !== "" ? "block" : "none";
+    }
 
-        function toggleTemplateInput() {
-            const templateType = document.getElementById("templateType").value;
-            const templateValueSection = document.getElementById("templateValueSection");
+    function handleEnter(event) {
+      if (event.key === "Enter") {
+        event.preventDefault();
+        addTemplateValue();
+      }
+    }
 
-            if (templateType !== "") {
-                templateValueSection.style.display = "block";
-            } else {
-                templateValueSection.style.display = "none";
-            }
-        }
+    function addTemplateValue() {
+      const templateValue = document.getElementById("templateValue").value;
+      const display = document.getElementById("templateValuesDisplay");
 
-        // Function to handle "Enter" key press in the template value input
-        function handleEnter(event) {
-            if (event.key === "Enter") {
-                event.preventDefault(); // Prevent form submission (if inside a form)
-                addTemplateValue();  // Call the function to add the value to the section
-            }
-        }
+      if (templateValue.trim() !== "") {
+        const valueDiv = document.createElement("div");
+        valueDiv.classList.add("template-value-tag");
 
-        // Function to add the entered value to the display section
-        function addTemplateValue() {
-            const templateValue = document.getElementById("templateValue").value;
-            const templateValuesDisplay = document.getElementById("templateValuesDisplay");
+        const valueText = document.createElement("span");
+        valueText.textContent = templateValue;
+        valueDiv.appendChild(valueText);
 
-            if (templateValue !== "") {
-                // Create a new div to display the value with a cross button
-                const valueDiv = document.createElement("div");
-                valueDiv.classList.add("template-value-tag");
+        const removeBtn = document.createElement("span");
+        removeBtn.textContent = "❌";
+        removeBtn.classList.add("remove-btn");
+        removeBtn.onclick = () => valueDiv.remove();
+        valueDiv.appendChild(removeBtn);
 
-                // Create the value text node
-                const valueText = document.createElement("span");
-                valueText.textContent = templateValue;
-                valueDiv.appendChild(valueText);
+        display.appendChild(valueDiv);
+        document.getElementById("templateValue").value = "";
+      }
+    }
 
-                // Create the cross button to remove the value
-                const removeBtn = document.createElement("span");
-                removeBtn.textContent = "❌";
-                removeBtn.classList.add("remove-btn");
-                removeBtn.onclick = function () {
-                    valueDiv.remove();
-                };
-                valueDiv.appendChild(removeBtn);
+    function submitEmailCampaign(event) {
+      event.preventDefault();
 
-                // Append the new value div to the display section
-                templateValuesDisplay.appendChild(valueDiv);
+      const emailType = document.getElementById("emailType").value;
+      const templateType = document.getElementById("templateType").value;
+      const templateValue = document.getElementById("templateValue").value;
+      const emails = document.getElementById("emails").value;
 
-                // Clear the input field after adding the value
-                document.getElementById("templateValue").value = "";
-            }
-        }
+      const data = {
+        emailType,
+        templateType,
+        templateValue,
+        emails
+      };
 
-        function submitEmailCampaign() {
-            const emailType = document.getElementById("emailType").value;
-            const templateValue = document.getElementById("templateValue").value;
+      // ✅ Log the exact object before sending
+      console.log("📤 Sending to server:", data);
 
-            if (emailType === "all") {
-                alert("Submitting campaign to all WhatsApp users.");
-            } else {
-                const emails = document.getElementById("emails").value;
-                alert("Submitting campaign to selected WhatsApp numbers: " + emails);
-            }
-
-            if (templateValue) {
-                alert("Using template value: " + templateValue);
-            }
-        }
-    </script>
-
+      fetch("http://192.168.0.162:8000", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(data)
+      })
+        .then(res => res.json())
+        .then(response => {
+          console.log("✅ Server response:", response);
+          alert("Campaign submitted successfully!");
+        })
+        .catch(error => {
+          console.error("❌ Error:", error);
+          alert("There was an error submitting the campaign.");
+        });
+    }
+  </script>
 </body>
 
 </html>
