--- a/email_campaigning.html
+++ b/email_campaigning.html
@@ -80,18 +80,21 @@
   <script src="drawer.js"></script>
 
   <script>
+    // Toggle display of selective email input
     function toggleEmailInput() {
       const emailType = document.getElementById("emailType").value;
       const selectiveEmailSection = document.querySelector(".selective-email-section");
       selectiveEmailSection.style.display = emailType === "selective" ? "block" : "none";
     }
 
+    // Toggle the template value input section display based on the selected template
     function toggleTemplateInput() {
       const templateType = document.getElementById("templateType").value;
       const templateValueSection = document.getElementById("templateValueSection");
       templateValueSection.style.display = templateType !== "" ? "block" : "none";
     }
 
+    // Handle the Enter key to add a template value
     function handleEnter(event) {
       if (event.key === "Enter") {
         event.preventDefault();
@@ -99,6 +102,7 @@
       }
     }
 
+    // Add the template value to the display area
     function addTemplateValue() {
       const templateValue = document.getElementById("templateValue").value;
       const templateValuesDisplay = document.getElementById("templateValuesDisplay");
@@ -118,28 +122,38 @@
         valueDiv.appendChild(removeBtn);
 
         templateValuesDisplay.appendChild(valueDiv);
-        document.getElementById("templateValue").value = "";
+        document.getElementById("templateValue").value = ""; // Clear input field after adding
       }
     }
 
+    // Submit the email campaign with the collected data
     function submitEmailCampaign(event) {
       event.preventDefault();
 
       const emailType = document.getElementById("emailType").value;
       const templateType = document.getElementById("templateType").value;
-      const templateValue = document.getElementById("templateValue").value;
-      const emails = document.getElementById("emails").value;
+      const emails = document.getElementById("emails").value.trim();
 
+      // Collect all template values from the displayed tags (excluding the remove button "❌")
+      const templateValues = Array.from(document.querySelectorAll("#templateValuesDisplay .template-value-tag"))
+        .map(tag => {
+          const valueText = tag.querySelector("span"); // Get the span that holds the value
+          return valueText ? valueText.textContent.trim() : "";
+        })
+        .filter(value => value.length > 0); // Filter out any empty values
+
+      // Create the data object to send
       const data = {
         emailType,
         templateType,
-        templateValue,
+        templateValues,  // Now templateValues are collected, only text content
         emails
       };
 
-      // ✅ Print the data being sent to the server
+      // Log the data to verify before sending
       console.log("📤 Sending email campaign data:", data);
 
+      // Send the data to the server via fetch
       fetch("http://localhost:3000/send-email", {
         method: "POST",
         headers: {
