--- a/whatsapp_campaigning.html
+++ b/whatsapp_campaigning.html
@@ -37,7 +37,7 @@
     <a href="#">Contact</a>
   </div>
 
-  <form class="form" onsubmit="submitEmailCampaign(event)">
+  <form class="form" onsubmit="submitWhatsAppCampaign(event)">
     <div class="email-section">
       <h2>WhatsApp Campaigning</h2>
 
@@ -65,7 +65,7 @@
 
         <div class="template-value-section" id="templateValueSection" style="display: none;">
           <label for="templateValue">Enter Value for Selected Template:</label>
-          <input type="text" id="templateValue" placeholder="Enter your string here" onkeydown="handleEnter(event)" />
+          <input type="text" id="templateValue" placeholder="e.g. name: John" onkeydown="handleEnter(event)" />
         </div>
 
         <div id="templateValuesDisplay" class="template-values-display"></div>
@@ -78,19 +78,18 @@
   <script src="drawer.js"></script>
 
   <script>
-    // Toggle display of selective email input
     function toggleEmailInput() {
       const emailType = document.getElementById("emailType").value;
-      document.querySelector(".selective-email-section").style.display = emailType === "selective" ? "block" : "none";
+      document.querySelector(".selective-email-section").style.display =
+        emailType === "selective" ? "block" : "none";
     }
 
-    // Toggle the template value input section display based on the selected template
     function toggleTemplateInput() {
       const templateType = document.getElementById("templateType").value;
-      document.getElementById("templateValueSection").style.display = templateType !== "" ? "block" : "none";
+      document.getElementById("templateValueSection").style.display =
+        templateType !== "" ? "block" : "none";
     }
 
-    // Handle the Enter key to add a template value
     function handleEnter(event) {
       if (event.key === "Enter") {
         event.preventDefault();
@@ -98,58 +97,61 @@
       }
     }
 
-    // Add the template value to the display area
     function addTemplateValue() {
-      const templateValue = document.getElementById("templateValue").value.trim();
+      const input = document.getElementById("templateValue");
       const display = document.getElementById("templateValuesDisplay");
+      const value = input.value.trim();
 
-      if (templateValue !== "") {
-        const valueDiv = document.createElement("div");
-        valueDiv.classList.add("template-value-tag");
+      if (value.includes(":")) {
+        const [key, val] = value.split(":").map(s => s.trim());
+        if (key && val) {
+          const tag = document.createElement("div");
+          tag.classList.add("template-value-tag");
 
-        const valueText = document.createElement("span");
-        valueText.textContent = templateValue;
-        valueDiv.appendChild(valueText);
+          const span = document.createElement("span");
+          span.textContent = `${key}: ${val}`;
+          tag.appendChild(span);
 
-        const removeBtn = document.createElement("span");
-        removeBtn.textContent = "❌";
-        removeBtn.classList.add("remove-btn");
-        removeBtn.onclick = () => valueDiv.remove();
-        valueDiv.appendChild(removeBtn);
+          const removeBtn = document.createElement("span");
+          removeBtn.textContent = "❌";
+          removeBtn.classList.add("remove-btn");
+          removeBtn.onclick = () => tag.remove();
+          tag.appendChild(removeBtn);
 
-        display.appendChild(valueDiv);
-        document.getElementById("templateValue").value = ""; // Clear input field after adding
+          display.appendChild(tag);
+        }
       }
+
+      input.value = "";
     }
 
-    // Submit the email campaign with the collected data
-    function submitEmailCampaign(event) {
+    function submitWhatsAppCampaign(event) {
       event.preventDefault();
 
       const emailType = document.getElementById("emailType").value;
       const templateType = document.getElementById("templateType").value;
       const emails = document.getElementById("emails").value.trim();
 
-      // Collect all template values from the displayed tags (excluding the remove button "❌")
-      const templateValues = Array.from(document.querySelectorAll("#templateValuesDisplay .template-value-tag"))
-        .map(tag => {
-          const valueText = tag.querySelector("span"); // Get the span that holds the value
-          return valueText ? valueText.textContent.trim() : "";
-        })
-        .filter(value => value.length > 0); // Filter out any empty values
+      const templateValues = {};
+      const tags = document.querySelectorAll("#templateValuesDisplay .template-value-tag");
 
-      // Create the data object to send
+      tags.forEach(tag => {
+        const text = tag.querySelector("span").textContent;
+        const [key, value] = text.split(":").map(s => s.trim());
+        if (key && value) {
+          templateValues[key] = value;
+        }
+      });
+
       const data = {
         emailType,
         templateType,
-        templateValues,  // Now templateValues are collected, only text content
+        templateValues,
         emails
       };
 
-      // Log the data to verify before sending
       console.log("📤 Sending to server:", data);
 
-      // Send the data to the server via fetch
       fetch("http://192.168.0.162:8000", {
         method: "POST",
         headers: {
