Index page main Content Done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         
         <a href="#">Contact</a>
     </div>
+    <div class="content">
+        <h1>Hello User</h1>
+    </div>
     
 
     <script src="drawer.js"></script>
