--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="sms_campaigning.html">SMS Campaigning</a>
         </div>
         
-        <a href="#">Contact</a>
+        <a href="dynamic-template.html">Dynamic Template</a>
     </div>
     <div class="contentt">
         <h1 id = "content">Hello, Awesome Human! 👋</h1>
