--- a/dynamic-template.html
+++ b/dynamic-template.html
@@ -61,7 +61,7 @@
         container.className = "entry";
 
         const text = document.createElement("p");
-        text.innerHTML = `<strong>Hello:</strong> ${item.name} <br> <strong>Fields:</strong> ${item.company}`;
+        text.innerHTML = `<strong>Name :</strong> ${item.name}\t \t <strong>Value :</strong> ${item.company}`;
         container.appendChild(text);
 
         const deleteBtn = document.createElement("button");
