--- a/email.html
+++ b/email.html
@@ -27,7 +27,7 @@
             <!-- s -->
             <a href="templatecontent.html">Template Structure</a>
         </div>
-        <a href="#">Services</a>
+        <a href="dynamic-template.html">Dynamic Template</a>
         <a href="#">Contact</a>
     </div>
 
