--- a/phone.html
+++ b/phone.html
@@ -27,7 +27,7 @@
             
             <a href="templatecontent.html">Template Content</a>
         </div>
-        <a href="#">Services</a>
+        <a href="dynamic-template.html">Dynamic Template</a>
         <a href="#">Contact</a>
     </div>
 
