--- a/sms_campaigning.html
+++ b/sms_campaigning.html
@@ -34,7 +34,7 @@
       <a href="email_campaigning.html">Email Campaigning</a>
       <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
     </div>
-
+    <a href="dynamic-template.html">Dynamic Template</a>
     <a href="#">Contact</a>
   </div>
 
