--- a/templatecontent.html
+++ b/templatecontent.html
@@ -34,6 +34,7 @@
         <a href="whatsapp_campaigning.html">WhatsApp Campaigning</a>
         <a href="sms_campaigning.html">Phone Campaigning</a>
     </div>
+        <a href="dynamic-template.html">Dynamic Template</a>
         <a href="#">Contact</a>
     </div>
 
