--- a/whatsapp_campaigning.html
+++ b/whatsapp_campaigning.html
@@ -33,7 +33,7 @@
       <a href="email_campaigning.html">Email Campaigning</a>
       <a href="sms_campaigning.html">SMS Campaigning</a>
     </div>
-
+    <a href="dynamic-template.html">Dynamic Template</a>
     <a href="#">Contact</a>
   </div>
 
