--- a/email.html
+++ b/email.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <!-- Drawr -->
     <div class="navbar">
         
         <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
@@ -30,6 +31,7 @@
         <a href="dynamic-template.html">Dynamic Template</a>
         <a href="#">Contact</a>
     </div>
+    <!-- Drawr -->
 
     <div class="container">
         <div class="cardmaster-table-card">
