--- a/sms_campaigning.html
+++ b/sms_campaigning.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+  <!-- Drawr -->
   <div class="navbar">
     <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
     <span>My Website</span>
@@ -37,7 +37,7 @@
     <a href="dynamic-template.html">Dynamic Template</a>
     <a href="#">Contact</a>
   </div>
-
+  <!-- Drawr -->
   <!-- ✅ Form for SMS Campaign -->
   <form class="form" onsubmit="submitSMSCampaign(event)">
     <div class="email-section">
