--- a/whatsapp_campaigning.html
+++ b/whatsapp_campaigning.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
+  <!-- Navbar -->
   <div class="navbar">
     <img src="menu.png" alt="Menu" class="open-btn" onclick="toggleDrawer()" />
     <span>My Website</span>
   </div>
 
+  <!-- Navbar -->
+
+  <!-- Drawr -->
   <div id="drawer" class="drawer">
     <a href="#" onclick="toggleSubMenu('home-submenu')">Contact</a>
     <div id="home-submenu" class="submenu">
@@ -36,7 +40,7 @@
     <a href="dynamic-template.html">Dynamic Template</a>
     <a href="#">Contact</a>
   </div>
-
+<!-- Drawr -->
   <form class="form" onsubmit="submitWhatsAppCampaign(event)">
     <div class="email-section">
       <h2>WhatsApp Campaigning</h2>
